--- a/css-mobile/main.css
+++ b/css-mobile/main.css
@@ -4,29 +4,28 @@
 }
 
 .main {
-    grid-column: 1/25;
-    grid-row: 3/22;
+    grid-area: 4/1/33/25;
 
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(24, 1fr);
+    grid-template-rows: repeat(36, 1fr);
 
     background-color: rgb(242, 242, 242);
 }
 
 .title {
-    grid-area: 2 / 4 / 4 / 10;
+    grid-area: 2 / 2 / 4 / 12;
 
     display: grid;
     place-items: center;
-    font-size: 50px;
+    font-size: 8vw;
     overflow: hidden;
 
     font-family: daikon;
 }
 
 .emblem {
-    grid-area: 4 / 6 / 8 / 8;
+    grid-area: 4 / 2 / 6 / 12;
 
     display: flex;
     justify-content: center;
@@ -35,16 +34,12 @@
     overflow: hidden;
 }
 
-.emblem img {
-    width: 35%;
-}
-
 .blocks {
-    grid-area: 8 / 4 / 14 / 10;
+    grid-area: 6 / 2 / 23 / 12;
 
     display: grid;
-    grid-template-columns: repeat(11, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(23, 1fr);
 
     z-index: 2;
 }
@@ -69,19 +64,19 @@
 }
 
 .blocks .first {
-    grid-area: 1/1/4/4;
+    grid-area: 1 / 2 / 8 / 12;
 }
 
 .blocks .second {
-    grid-area: 1/5/4/8;
+    grid-area: 9 / 2 / 16 / 12;
 }
 
 .blocks .third {
-    grid-area: 1/9/4/12;
+    grid-area: 17 / 2 / 24 / 12;
 }
 
 .picture {
-    grid-area: 12 / 5 / 24 / 9;
+    grid-area: 24/2/34/12;
 
     display: grid;
     place-items: center;
@@ -90,7 +85,28 @@
     z-index: 1;
 }
 
-.picture img {
-    border-radius: 50%;
-    width: 50%;
+@media (max-width: 425px) {
+    .picture img {
+        border-radius: 50%;
+        width: 100%;
+    }
+
+    .emblem img {
+        width: 25vw;
+    }
+
+    .blocks {
+        padding-top: 8vw;
+    }
+}
+
+@media (min-width: 426px) {
+    .picture img {
+        border-radius: 50%;
+        width: 55%;
+    }
+
+    .emblem img {
+        width: 10vw;
+    }
 }
